--- a/React_Frontend/public/css/app.css
+++ b/React_Frontend/public/css/app.css
@@ -7,10 +7,12 @@ html {
 }
 
 body {
-    background: #eacda3;  /* fallback for old browsers */
+    /*background: #eacda3;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #d6ae7b, #eacda3);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #d6ae7b, #eacda3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     font-size: 1.6rem;
+    font-family: 'Titillium Web', sans-serif;
+
 }
 
 
